# qfaktury

./: .gitignore  CMakeLists.txt  ChangeLog.txt  Const.h  Convert.cpp  Convert.h  ConvertAmount.cpp  ConvertAmount.h  CustomPaymData.cpp  CustomPaymData.h  CustomPayment.cpp  CustomPayment.h  CustomPaymentDialog.ui  Duplikat.cpp  FAQ  Faktura.cpp  Faktura.h  Faktura.ui  FakturaBrutto.cpp  FakturaBrutto.h  FindDetectFiles.cmake  FindFedora.cmake  Form1.cpp  Form1.h  Form4.cpp  FormFra.cpp  InvoiceData.h  Kontrahenci.cpp  Kontrahenci.h  Kontrahenci.ui  KontrahenciLista.cpp  KontrahenciLista.h  KontrahenciLista.ui  Korekta.cpp  Korekta.h  Korekta.ui  KorektaBrutto.cpp  KorektaBrutto.h  Kreator.cpp  Kreator.h  (+97 more)
cmake/modules/: FindFedora.cmake
docs/: documentation.yaml
docs/translations/: qfaktury_en.ts  qfaktury_pl.ts
icons/: .directory
ide/: .clang-format  .clang-tidy  run_clang_tidy.py
przelewy/: preview.ui.h  przelew.ui  us.ui.h
schemas/: Schemat_JPK_FA_v1-0.xsd  Schemat_JPK_VAT3_v1-1.xsd
share/qfaktury/icons/: qfaktury.desktop
share/qfaktury/templates/: style.css
src/: Bill.cpp  Bill.h  BuyerData.cpp  BuyerData.h  Buyers.cpp  Buyers.h  BuyersList.cpp  BuyersList.h  ChangeAmount.cpp  ChangeAmount.h  Const.h  ConvertAmount.cpp  ConvertAmount.h  CorrectGross.cpp  CorrectGross.h  Correction.cpp  Correction.h  CustomPaymData.cpp  CustomPaymData.h  CustomPayment.cpp  CustomPayment.h  DateWidgetItem.h  DeliveryNote.cpp  DeliveryNote.h  Duplicate.cpp  Duplicate.h  Duplikat.cpp  Duplikat.h  Faktura.cpp  Faktura.h  FakturaBrutto.cpp  FakturaBrutto.h  Goods.cpp  Goods.h  GoodsGrossList.cpp  GoodsGrossList.h  GoodsIssuedNotes.cpp  GoodsIssuedNotes.h  GoodsList.cpp  GoodsList.h  (+127 more)
src/GusApi/: composer.json  dependencies.sh  getFromNip.php  php-dependencies.sh  soap-php.sh
src/GusApi/src/GusApi/: GusApi.php  RegonConstantsInterface.php  ReportTypes.php  SearchReport.php
src/GusApi/src/GusApi/Adapter/Soap/: SoapAdapter.php
src/SimpleSmtp_SSL_QT5/smtp_attachements/: emailwindow.cpp  emailwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  smtp.cpp  smtp.h  smtp.pro
src/alias/: memory.hpp
src/quazip-0.7.3/quazip/: JlCompress.cpp  JlCompress.h  crypt.h  ioapi.h  qioapi.cpp  quaadler32.cpp  quaadler32.h  quachecksum32.h  quacrc32.cpp  quacrc32.h  quagzipfile.cpp  quagzipfile.h  quaziodevice.cpp  quaziodevice.h  quazip.cpp  quazip.h  quazip_global.h  quazipdir.cpp  quazipdir.h  quazipfile.cpp  quazipfile.h  quazipfileinfo.cpp  quazipfileinfo.h  quazipnewinfo.cpp  quazipnewinfo.h  unzip.c  unzip.h  zip.c  zip.h
src/zlib-1.2.11/: adler32.lo  compress.lo  crc32.lo  deflate.lo  example  example64  examplesh  gzlib.lo  gzread.lo  gzwrite.lo  inflate.lo  inftrees.lo  libz.so.1.2.11  minigzip  minigzip64  minigzipsh  trees.lo  uncompr.lo  zutil.lo
templates/: black.css  colour.css  style.css  tables.css
translations/: qfaktury_de.qm  qfaktury_de.ts  qfaktury_en.qm  qfaktury_en.ts  qfaktury_pl.ts
ui/: Buyers.ui  BuyersList.ui  ChangeAmount.ui  CustomPaymentDialog.ui  Faktura.ui  Goods.ui  GoodsList.ui  Invoice.ui  Kontrahenci.ui  KontrahenciLista.ui  MainWindow.ui  Setting.ui  Setting.ui.autosave  Towary.ui  TowaryLista.ui  User.ui  Ustawienia.ui  Uzytkownik.ui  ZmienIlosc.ui  backup.ui  buyers.ui  buyerslist.ui  changeamount.ui  csvexport.ui  custompaymentdialog.ui  goods.ui  goodslist.ui  invoice.ui  mainwindow.ui  mainwindow_ui.rc  organizer.ui  saftfile.ui  setting.ui  user.ui
